--- a/src/app/features/LineBus/style.module.scss
+++ b/src/app/features/LineBus/style.module.scss
@@ -36,14 +36,11 @@
 
   &:hover {
     background-color: #3d74da81;
-    border: 1px solid #3d74da;
+    outline: 1px solid #3d74da;
     transition: 0.6s;
     cursor: pointer;
   }
 
-  &:active {
-    border: 1px solid #3d74da;
-  }
 }
 
 .col {
@@ -58,6 +55,11 @@
     padding: 4px;
     outline: none;
   }
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
 }
 
 .selectorGroup {
@@ -94,4 +96,8 @@
 .label {
   font-size: 1.2rem;
   color: #fff;
+}
+
+.buttonActive {
+  background-color: #3d74da;
 }
