--- a/src/app/features/LineBus/style.module.scss
+++ b/src/app/features/LineBus/style.module.scss
@@ -1,9 +1,14 @@
 .container {
   width: 40%;
-
   height: 100vh;
   background-color: rgb(68, 66, 64);
   overflow-x: hidden;
+  //for remove scrollbar and continue working
+  &::-webkit-scrollbar {
+    display: none;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
 
 .row {
@@ -11,8 +16,10 @@
   justify-content: space-between;
   width: 100%;
   text-align: left;
-  color: #fff;
+  color: #ececec;
   margin: 2px;
+  padding: 2px;
+
   text-decoration: none;
   border: 1px 0 1px 0 solid #3d74da;
   transition: color 0.15s ease, border-color 0.15s ease;
@@ -37,7 +44,7 @@
   &:hover {
     background-color: #3d74da81;
     outline: 1px solid #3d74da;
-    transition: 0.6s;
+    transition: 0.4s;
     cursor: pointer;
   }
 }
@@ -46,8 +53,7 @@
   display: flex;
   justify-content: center;
 
-  & > input,
-  & > .selector {
+  & > input {
     width: 98%;
     height: 2.5rem;
     line-height: 2.2rem;
@@ -59,46 +65,35 @@
 .header {
   display: flex;
   justify-content: space-between;
-  color: #fff;
-  padding: 0.5em 1em;
+  color: #ececec;
+  padding: 0.5em 0.5em;
 }
 
 .selectorGroup {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   font-size: 1.2rem;
   height: 2.5rem;
   line-height: 2.2rem;
   padding: 1em;
-
-  & > .selector {
-    width: 50%;
-    text-align: center;
-    height: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-
-    &.selected {
-      background-color: #3d74da;
-    }
-
-    &:first-child {
-      border-right: 1px solid #4b4b4b;
-    }
-    &:last-child {
-      border-left: 1px solid #4b4b4b;
-      border-right: none;
-    }
+  //for remove scrollbar and continue working
+  ::-webkit-scrollbar {
+    display: none;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
 }
 
-.label {
-  font-size: 1.2rem;
-  color: #fff;
+.titleChoices {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
 }
 
 .active {
   background-color: #3d74da;
+}
+
+.textActive {
+  color: #3d74da;
 }
